added seperate stock page
